[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.6.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "=0.3.10", default-features = true }
rand_core = "0.6"
ff = "0.12"
group = { version = "0.12", features = ["tests"] }
pairing_lib = { version = "0.22", package = "pairing" }
subtle = "2.2.1"

ark-ec = { version = "0.4.0-alpha.7" }
ark-ff = { version = "0.4.0-alpha.7" }
ark-std = { version = "0.4.0-alpha" }
ark-serialize = { version = "0.4.0-alpha.7" }
ark-bls12-381 = { version = "0.4.0-alpha.1" }
zeroize = "1.5.7"
num-bigint = "^0.4.3"

serde = { version = "1.0", features = ["derive"], optional = true }
ec-gpu = { version = "0.2.0", optional = true }
byte-slice-cast = "1.0.0"

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = ["serde"]
portable = ["blst/portable"]
gpu = ["ec-gpu"]
__private_bench = []
